@@ -430,9 +430,6 @@ namespace eval ArcherCore {
 	variable mSeparateCommandWindowPref ""
 	variable mSepCmdPrefix "sepcmd_"
 
-	variable mRtBotMintie 0
-	variable mRtBotMintiePref ""
-
 	variable mCompPickMode $COMP_PICK_TREE_SELECT_MODE
 	variable mCompSelectMode $COMP_SELECT_LIST_MODE
 	variable mCompSelectModePref ""
@@ -1240,7 +1237,6 @@ namespace eval ArcherCore {
     trace add variable [::itcl::scope mRayColorVoid] write watchVar
 
     trace add variable [::itcl::scope mDisplayFontSize] write watchVar
-    trace add variable [::itcl::scope mRtBotMintie] write watchVar
 
     eval itk_initialize $args
 
@@ -7263,7 +7259,6 @@ namespace eval ArcherCore {
 }
 
 ::itcl::body ArcherCore::watchVar {_name1 _name2 _op} {
-    global rt_bot_mintie
     global env
 
     if {![info exists itk_component(ged)]} {
@@ -7325,10 +7320,6 @@ namespace eval ArcherCore {
 	}
 	mRayColorVoid {
 	    $itk_component(ged) configure -rayColorVoid $mRayColorVoid
-	}
-	mRtBotMintie {
-	    set rt_bot_mintie $mRtBotMintie
-	    set env(LIBRT_BOT_MINTIE) $mRtBotMintie
 	}
     }
 }
